[package]
name = "r-display"
version = "0.1.0"
authors = ["Moritz Moeller <virtualritz@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
c_vec = "1.3.3"
ndspy-sys = { path = "../..", features = ["download_3delight_lib"] }
png = "0.16.4"
